--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ p {
 /* Title Section */
 #title .container-fluid {
   padding: 3% 15% 7%;
-  text-align: left;
+  text-align: centre;
 }
 
 /* Title Image */
